Agrego endpoint providers, cambios en endpoint products, agrego logos
